tests/baselines/reference/emitter.asyncGenerators.objectLiteralMethods.esnext.errors.txt
tests/cases/conformance/emitter/esnext/asyncGenerators/O4.ts(3,26): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


==== tests/cases/conformance/emitter/esnext/asyncGenerators/O1.ts (0 errors) ====
    const o1 = {
        async * f() {
        }
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/O2.ts (0 errors) ====
    const o2 = {
        async * f() {
            const x = yield;
        }
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/O3.ts (0 errors) ====
    const o3 = {
        async * f() {
            const x = yield 1;
        }
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/O4.ts (1 errors) ====
    const o4 = {
        async * f() {
            const x = yield* [1];
                             ~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
        }
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/O5.ts (0 errors) ====
    const o5 = {
        async * f() {
            const x = yield* (async function*() { yield 1; })();
        }
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/O6.ts (0 errors) ====
    const o6 = {
        async * f() {
            const x = await 1;
        }
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/O7.ts (0 errors) ====
    const o7 = {
        async * f() {
            return 1;
        }
    }
    